# shadow_field

./: .gitignore
cmake_project/: CMakeLists.txt  fs2sh.cpp  pos.txt  sh2fs.cpp  sh_ours.txt
cmake_project/include/: Mul5fs2sh.cpp  UI.h  brdf.h  bvhTree.h  diffuseObject.h  fastmul.hpp  fftprecomputed.hpp  fs2sh.cpp  generalObject.h  image.h  largefourierseries.hpp  legendre.h  lighting.h  multi_product.h  object.h  renderer.h  resource_manager.h  sampler.h  scene.h  select_size.hpp  sh.hpp  sh2fs.cpp  shRotate.h  shRotateMatrix.h  shorder.hpp  shproduct.h  simpleLighting.h  sphericalHarmonics.h  utils.h
cmake_project/lightings/jpg/: README.md
cmake_project/objects/scene/: config.txt
cmake_project/objects/scene_0/: config.txt
cmake_project/objects/scene_1/: config.txt  light_config.txt  object_config.txt
cmake_project/objects/scene_10/: light_config.txt  object_config.txt  untitled.mtl
cmake_project/objects/scene_2/: config.txt  light_config.txt  object_config.txt
cmake_project/objects/scene_2_3/: config.txt
cmake_project/objects/scene_2_5/: config.txt
cmake_project/objects/scene_2_7/: config.txt
cmake_project/objects/scene_3/: config.txt  (+2 more)
cmake_project/objects/scene_3 (copy)/: config.txt
cmake_project/shaders/: cubemap.frag  cubemap.vert  prt.frag  prt.vert  texture.frag  texture.vert
cmake_project/src/: boundingBox.cpp  brdf.cpp  bvhTree.cpp  diffuseObject.cpp  generalObject.cpp  legendre.cpp  lighting.cpp  main.cpp  multi_product.cu  object.cpp  renderer.cpp  resource_manager.cpp  sampler.cpp  scene.cpp  shRotate.cpp  shRotateMatrix.cpp  shader.cpp  shproduct.cpp
(+14 files in other folders)
